--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,7 @@
 .button {
     padding: 10px 15px;
-    background: var(--tg-theme-button-color);
-    color: var(--tg-theme-button-text-color);
+    background: var(--tg-theme-button-color, blanchedalmond);
+    color: var(--tg-theme-button-text-color, black);
     border: none;
     outline: none;
     cursor: pointer;
