--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,7 +1,7 @@
 .product {
     display: flex;
     flex-direction: column;
-    border: 1px solid var(--tg-theme-button-color);
+    border: 1px solid var(--tg-theme-button-color, black);
     padding: 15px;
     width: 170px;
 }
@@ -12,7 +12,7 @@
     background: lightgray;
     height: 100px;
     margin: 0 auto;
-    background: var(--tg-theme-button-color);
+    background: var(--tg-theme-button-color, blanchedalmond);
 }
 
 .description {
